[gd_scene load_steps=2 format=3 uid="uid://dpgqxrqlbhby1"]

[ext_resource type="Script" path="res://main.gd" id="1_1eawl"]

[node name="main" type="Node2D"]
script = ExtResource("1_1eawl")

[node name="projectiles" type="Node2D" parent="."]
position = Vector2(512, 300)

[node name="nextBtn" type="Button" parent="."]
offset_left = 920.0
offset_top = 562.0
offset_right = 1016.0
offset_bottom = 593.0
text = "Next Demo"

[node name="fireTimer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="curProjectileNameLabel" type="Label" parent="."]
offset_left = 133.0
offset_top = 21.0
offset_right = 908.0
offset_bottom = 170.0
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1
vertical_alignment = 1

[node name="curProjectileCountLabel" type="Label" parent="."]
offset_left = 381.0
offset_top = 134.0
offset_right = 691.0
offset_bottom = 270.0
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="nextBtn" to="." method="_on_next_btn_pressed"]
[connection signal="timeout" from="fireTimer" to="." method="_on_fire_timer_timeout"]
